<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:text="@string/throws_left_label"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/throws_left_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/throws_left_counter"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_die1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/white1"/>

            <ImageView
                android:id="@+id/iv_die2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/white2"/>

            <ImageView
                android:id="@+id/iv_die3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/white3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_die4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/white4"/>

            <ImageView
                android:id="@+id/iv_die5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/white5"/>

            <ImageView
                android:id="@+id/iv_die6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/white6"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/throw_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/throw_button_text"/>


        <Button
            android:id="@+id/calculate_result_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calculate_result_text"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_result_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_result_text"/>

            <Button
                android:id="@+id/cancel_calculation_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_calculation_text"/>

        </LinearLayout>

        <Button
            android:id="@+id/rule_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/rule_button_text"/>
    </LinearLayout>

    <Button
        android:id="@+id/result_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/result_button_text"/>


    <TextView
        android:id="@+id/round_aim_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:text="@string/round_reminder_text"/>


</FrameLayout>